# easy_cmd

./: 404.html  CHANGELOG.md  Cargo.toml  README.md  page_1.html  page_2.html  print.html  toc.html
src/: functions.rs  lib.rs  macros.rs  traits.rs
