[package]
name = "simple-command"
version = "0.1.0"
authors = ["Tamas Kis"]
edition = "2024"
description = "Simple interfaces for running CLI commands from Rust."
documentation = "https://docs.rs/simple-command"
repository = "https://github.com/tamaskis/simple_command"
license = "MIT OR Apache-2.0"

exclude = [".gitignore", ".github/", ".vscode/", "Cargo.lock", "book/"]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "src/docs-header.html" ]

[dependencies]
shell-words = "1.1.0"

[dev-dependencies]
